# rustling-ontology

./: build.rs
grammar/: Cargo.toml
grammar/ru/: Cargo.toml
grammar/ru/src/: rules_amount.rs  rules_datetime.rs  rules_duration.rs  rules_number.rs  training.rs
grammar/src/: lib.rs
