[package]
name = "rustling-ontology-ru"
version = "0.19.3"
authors = ["Arekkusuva <vuraddo@yahoo.com>"]
edition = "2018"

[dependencies]
rustling = { git = "https://github.com/snipsco/rustling", tag = "0.9.1" }
rustling-ontology-moment = { path = "../../moment" }
rustling-ontology-values = { path = "../../values" }
